--- a/metadata/md5-cache/games-util/grapejuice-7.7.2
+++ b/metadata/md5-cache/games-util/grapejuice-7.7.2
@@ -1,15 +1,15 @@
 DEFINED_PHASES=compile install postinst postrm preinst unpack
-DEPEND=app-arch/unzip dev-libs/gobject-introspection dev-libs/openssl dev-python/click dev-python/pygobject dev-python/packaging dev-python/pip dev-python/psutil dev-python/requests dev-python/setuptools dev-python/unidecode dev-util/desktop-file-utils dev-util/gtk-update-icon-cache media-libs/libpulse media-libs/mesa net-libs/gnutls x11-libs/cairo x11-libs/gtk+ x11-misc/shared-mime-info x11-misc/xdg-user-dirs x11-misc/xdg-utils virtual/wine
+DEPEND=sys-devel/gettext dev-vcs/git dev-python/pip x11-libs/cairo x11-libs/gtk+ dev-libs/gobject-introspection dev-util/desktop-file-utils x11-misc/xdg-utils x11-misc/xdg-user-dirs dev-util/gtk-update-icon-cache x11-misc/shared-mime-info x11-apps/mesa-progs
 DESCRIPTION=A Wine+Roblox management application
 EAPI=8
 HOMEPAGE=https://gitlab.com/brinkervii/grapejuice.git
 IDEPEND=dev-util/desktop-file-utils x11-misc/shared-mime-info
 INHERIT=xdg optfeature
-KEYWORDS=~amd64
+KEYWORDS=-* ~amd64
 LICENSE=GPL-3
-RDEPEND=app-arch/unzip dev-libs/gobject-introspection dev-libs/openssl dev-python/click dev-python/pygobject dev-python/packaging dev-python/pip dev-python/psutil dev-python/requests dev-python/setuptools dev-python/unidecode dev-util/desktop-file-utils dev-util/gtk-update-icon-cache media-libs/libpulse media-libs/mesa net-libs/gnutls x11-libs/cairo x11-libs/gtk+ x11-misc/shared-mime-info x11-misc/xdg-user-dirs x11-misc/xdg-utils virtual/wine
+RDEPEND=sys-devel/gettext dev-vcs/git dev-python/pip x11-libs/cairo x11-libs/gtk+ dev-libs/gobject-introspection dev-util/desktop-file-utils x11-misc/xdg-utils x11-misc/xdg-user-dirs dev-util/gtk-update-icon-cache x11-misc/shared-mime-info x11-apps/mesa-progs virtual/wine
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://gitlab.com/brinkervii/grapejuice/-/archive/v7.7.2/grapejuice-v7.7.2.tar.bz2
 _eclasses_=xdg-utils	baea6080dd821f5562d715887954c9d3	xdg	4a14c5c24f121e7da66e5aab4a168c6e	optfeature	222cb475c5a4f7ae7cfb0bf510a6fe54
-_md5_=b445c5b54d06270a2d5cfc5f048da153
+_md5_=7c57c1c7290d3493e54d253663ca2e76
