--- a/metadata/md5-cache/games-util/grapejuice-7.8.3
+++ b/metadata/md5-cache/games-util/grapejuice-7.8.3
@@ -1,5 +1,5 @@
-DEFINED_PHASES=compile install postinst postrm preinst unpack
-DEPEND=sys-devel/gettext dev-vcs/git dev-python/pip x11-libs/cairo x11-libs/gtk+ dev-libs/gobject-introspection dev-util/desktop-file-utils x11-misc/xdg-utils x11-misc/xdg-user-dirs dev-util/gtk-update-icon-cache x11-misc/shared-mime-info x11-apps/mesa-progs dev-python/psutil dev-python/pygobject dev-python/packaging dev-python/wheel dev-python/setuptools dev-python/requests dev-python/unidecode dev-python/click dev-python/pydantic
+DEFINED_PHASES=compile install postinst postrm preinst prepare unpack
+DEPEND=dev-libs/gobject-introspection dev-python/pip dev-util/desktop-file-utils dev-util/gtk-update-icon-cache dev-vcs/git sys-devel/gettext x11-apps/mesa-progs x11-libs/cairo x11-libs/gtk+ x11-misc/shared-mime-info x11-misc/xdg-user-dirs x11-misc/xdg-utils dev-python/click dev-python/packaging dev-python/psutil dev-python/pydantic dev-python/pygobject dev-python/requests dev-python/setuptools dev-python/unidecode dev-python/wheel
 DESCRIPTION=A Wine+Roblox management application
 EAPI=8
 HOMEPAGE=https://gitlab.com/brinkervii/grapejuice.git
@@ -7,9 +7,9 @@ IDEPEND=dev-util/desktop-file-utils x11-misc/shared-mime-info
 INHERIT=xdg optfeature
 KEYWORDS=-* ~amd64
 LICENSE=GPL-3
-RDEPEND=sys-devel/gettext dev-vcs/git dev-python/pip x11-libs/cairo x11-libs/gtk+ dev-libs/gobject-introspection dev-util/desktop-file-utils x11-misc/xdg-utils x11-misc/xdg-user-dirs dev-util/gtk-update-icon-cache x11-misc/shared-mime-info x11-apps/mesa-progs dev-python/psutil dev-python/pygobject dev-python/packaging dev-python/wheel dev-python/setuptools dev-python/requests dev-python/unidecode dev-python/click dev-python/pydantic virtual/wine
+RDEPEND=dev-libs/gobject-introspection dev-python/pip dev-util/desktop-file-utils dev-util/gtk-update-icon-cache dev-vcs/git sys-devel/gettext x11-apps/mesa-progs x11-libs/cairo x11-libs/gtk+ x11-misc/shared-mime-info x11-misc/xdg-user-dirs x11-misc/xdg-utils dev-python/click dev-python/packaging dev-python/psutil dev-python/pydantic dev-python/pygobject dev-python/requests dev-python/setuptools dev-python/unidecode dev-python/wheel virtual/wine
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://gitlab.com/brinkervii/grapejuice/-/archive/v7.8.3/grapejuice-v7.8.3.tar.bz2
 _eclasses_=xdg-utils	baea6080dd821f5562d715887954c9d3	xdg	4a14c5c24f121e7da66e5aab4a168c6e	optfeature	222cb475c5a4f7ae7cfb0bf510a6fe54
-_md5_=b71f40119c122c15d9d29cebcf163233
+_md5_=787fa4eef0dfde874938cf69a2c755c8
